fix-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,6 @@ button div {
 /*Main*/
 
 .main-scrolla {
-    overflow: auto;
     height: 50rem;
 }
 
